--- a/index.html
+++ b/index.html
@@ -825,7 +825,7 @@
     <script>
         // Configuration
         const WHATSAPP_NUMBER = "+33756950190";
-        const PAYPAL_ME_LINK = "https://paypal.me/JEANSKODOC?locale.x=fr_XC&country.x=LS";
+        const PAYPAL_ME_LINK = "https://paypal.me/awallymua";
         const HOME_PAGE_URL = "https://boutique-awa.netlify.app/";
         
         // Prix des formations
